add account links

--- a/index.html
+++ b/index.html
@@ -29,11 +29,22 @@
 
 <body>
     <article class="markdown-body">
-        <h1 align="center">Fun Exists</h1>
+        <h1 align="center"><img alt="Fun Exists Logo" title="Fun Exists" height="48" width="48" src="./logo.svg" />Fun Exists</h1>
 
-        <hr style="height:1px" />
+        <p align="center" style="color:grey;">mail @ funexists.com</p>
+
+        <p align="center">
+            <a href="https://github.com/funexists">
+                <img alt="GitHub" title="funexists's GitHub Account" height="48" width="48" src="./github.svg" />
+            </a>
+            <a href="https://funexists.bsky.social">
+                <img alt="BlueSky" title="funexists's BlueSky Account" height="48" width="48" src="./bluesky.png" />
+            </a>
+            <a href="https://www.youtube.com/c/funexists">
+                <img alt="YouTube" title="funexists's YouTube Channel" height="48" width="48" src="./youtube.svg" />
+            </a>
+        </p>
       
-        <img alt="Fun Exists Logo" title="Fun Exists" height="48" width="48" src="./logo.svg" />
     </article>
 </body>
 
