fix youtube url

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="https://funexists.bsky.social">
                 <img alt="BlueSky" title="funexists's BlueSky Account" height="48" width="48" src="./bluesky.png" />
             </a>
-            <a href="https://www.youtube.com/c/funexists">
+            <a href="https://www.youtube.com/@funexists">
                 <img alt="YouTube" title="funexists's YouTube Channel" height="48" width="48" src="./youtube.svg" />
             </a>
         </p>
