--- a/index.html
+++ b/index.html
@@ -16,21 +16,22 @@
 <body>
   <article class="markdown-body">
     <h1 align="center">
-      <img alt="Fun Exists Logo" title="Fun Exists" height="96" width="96" src="./logo.svg" />
+      <img alt="Fun Exists Logo" title="Fun Exists" height="96" width="96" src="./logo.png" />
       Fun Exists
     </h1>
-    <p style="color:grey;">Fun &exist; pronounced the same as "fun e" or "funny".</p>
-
-    <p align="center">
-      <a href="https://github.com/funexists">
-        <img alt="GitHub" title="funexists's GitHub Account" height="24" width="24" src="./github.svg" />
-      </a>
-      <a href="https://funexists.bsky.social">
-        <img alt="BlueSky" title="funexists's BlueSky Account" height="24" width="24" src="./bluesky.png" />
-      </a>
-      <a href="https://www.youtube.com/@funexists">
-        <img alt="YouTube" title="funexists's YouTube Channel" height="24" width="24" src="./youtube.svg" />
-      </a>
+    <p>
+      <div align="center" style="color:grey;">Fun &exist; pronounced the same as "fun e" or "funny".</div>
+      <div align="right">
+        <a href="https://github.com/funexists">
+          <img alt="GitHub" title="funexists's GitHub Account" height="24" width="24" src="./github.svg" />
+        </a>
+        <a href="https://funexists.bsky.social">
+          <img alt="BlueSky" title="funexists's BlueSky Account" height="24" width="24" src="./bluesky.png" />
+        </a>
+        <a href="https://www.youtube.com/@funexists">
+          <img alt="YouTube" title="funexists's YouTube Channel" height="24" width="24" src="./youtube.svg" />
+        </a>
+      </div>
     </p>
 
     </p>
@@ -38,22 +39,22 @@
       This includes, but is not limited to: puns, game development in Lean and talks on Proof Assistants and Dependently Typed Programming.
     </p>
 
-    <h2>Projects include:</h2>
+    <h2>Projects</h2>
     <ul>
       <li><a href="https://github.com/funexists/raylean">RayLean</a>: Lean4 bindings for Raylib</li>
       <li><a href="https://github.com/funexists/raylean">Jessica Can't Swim</a>: a game built using Raylean</li>
       <li><a href="https://github.com/funexists/coq-lean-cheatsheet">Coq Lean Cheatsheet</a>: a Cheatsheet for people transitioning from Coq to Lean</li>
     </ul>
 
-    <h2>Presentations:</h2>
+    <h2>Presentations</h2>
     <ul>
       <li><a href="https://funexists.github.io/2025-stellenbosch/">The Little Typer reading group (Stellenbosch 2025)</a></li>
       <li><a href="https://github.com/funexists/ccc-talk">Correct Code by Construction (2022 London)</a></li>
       <li><a href="https://github.com/funexists/advertising-coq">Advertising Coq (2020 Stellenbosch)</a></li>
     </ul>
     
-
-    <p style="color:grey;">mail @ funexists.com</p>
+    <h2>Contact</h2>
+    <p>mail @ funexists.com</p>
     
   </article>
 </body>
