try another styling

--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
 <body>
   <article class="markdown-body">
     <h1 align="center">
-      <img alt="Fun Exists Logo" title="Fun Exists" height="96" width="96" src="./logo.png" />
+      <a href="https://github.com/funexists">
+        <img alt="Fun Exists Logo" title="Fun Exists" height="96" width="96" src="./logo.png" />
+      </a>
       Fun Exists
     </h1>
     <p>
-      <div align="center" style="color:grey;">Fun &exist; pronounced the same as "fun e" or "funny".</div>
-      <div align="right">
-        <a href="https://github.com/funexists">
-          <img alt="GitHub" title="funexists's GitHub Account" height="24" width="24" src="./github.svg" />
-        </a>
-        <a href="https://funexists.bsky.social">
-          <img alt="BlueSky" title="funexists's BlueSky Account" height="24" width="24" src="./bluesky.png" />
-        </a>
-        <a href="https://www.youtube.com/@funexists">
-          <img alt="YouTube" title="funexists's YouTube Channel" height="24" width="24" src="./youtube.svg" />
-        </a>
-      </div>
+      <a href="https://github.com/funexists">
+        <img alt="GitHub" title="funexists's GitHub Account" height="24" width="24" src="./github.svg" />
+      </a>
+      <a href="https://funexists.bsky.social">
+        <img alt="BlueSky" title="funexists's BlueSky Account" height="24" width="24" src="./bluesky.png" />
+      </a>
+      <a href="https://www.youtube.com/@funexists">
+        <img alt="YouTube" title="funexists's YouTube Channel" height="24" width="24" src="./youtube.svg" />
+      </a>
+      <div align="right" style="color:grey;">Fun &exist; pronounced the same as "fun e" or "funny".</div>
     </p>
 
     </p>
@@ -49,8 +49,8 @@
     <h2>Presentations</h2>
     <ul>
       <li><a href="https://funexists.github.io/2025-stellenbosch/">The Little Typer reading group (Stellenbosch 2025)</a></li>
-      <li><a href="https://github.com/funexists/ccc-talk">Correct Code by Construction (2022 London)</a></li>
-      <li><a href="https://github.com/funexists/advertising-coq">Advertising Coq (2020 Stellenbosch)</a></li>
+      <li><a href="https://github.com/funexists/ccc-talk">Correct Code by Construction (London 2022)</a></li>
+      <li><a href="https://github.com/funexists/advertising-coq">Advertising Coq (Stellenbosch 2020)</a></li>
     </ul>
     
     <h2>Contact</h2>
