another styling change

--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
   <article class="markdown-body">
     <h1 align="center">
       <a href="https://github.com/funexists">
-        <img alt="Fun Exists Logo" title="Fun Exists" height="96" width="96" src="./logo.png" />
+        <img alt="Fun Exists Logo" title="Fun Exists" height="96" width="96" src="./logo_flat.png" />
       </a>
       Fun Exists
     </h1>
-    <p>
-      <a href="https://github.com/funexists">
+    <p style="color:grey;">
+      Fun &exist; pronounced the same as "fun e" or "funny".
+      <a align="right" href="https://github.com/funexists">
         <img alt="GitHub" title="funexists's GitHub Account" height="24" width="24" src="./github.svg" />
       </a>
-      <a href="https://funexists.bsky.social">
+      <a align="right" href="https://funexists.bsky.social">
         <img alt="BlueSky" title="funexists's BlueSky Account" height="24" width="24" src="./bluesky.png" />
       </a>
-      <a href="https://www.youtube.com/@funexists">
+      <a align="right" href="https://www.youtube.com/@funexists">
         <img alt="YouTube" title="funexists's YouTube Channel" height="24" width="24" src="./youtube.svg" />
       </a>
-      <div align="right" style="color:grey;">Fun &exist; pronounced the same as "fun e" or "funny".</div>
     </p>
 
     </p>
