--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
       <a href="https://github.com/funexists">
         <img alt="GitHub" title="funexists's GitHub Account" height="24" width="24" src="./github.svg" />
       </a>
-      <a href="https://funexists.bsky.social">
-        <img alt="BlueSky" title="funexists's BlueSky Account" height="24" width="24" src="./bluesky.png" />
-      </a>
       <a href="https://www.youtube.com/@funexists">
         <img alt="YouTube" title="funexists's YouTube Channel" height="24" width="24" src="./youtube.svg" />
       </a>
@@ -42,7 +39,7 @@
     <h2>Projects</h2>
     <ul>
       <li><a href="https://github.com/funexists/raylean">RayLean</a>: Lean4 bindings for Raylib</li>
-      <li><a href="https://github.com/funexists/raylean">Jessica Can't Swim</a>: a game built using Raylean</li>
+      <li><a href="https://github.com/funexists/jessicacantswim">Jessica Can't Swim</a>: a game built using Raylean</li>
       <li><a href="https://github.com/funexists/coq-lean-cheatsheet">Coq Lean Cheatsheet</a>: a Cheatsheet for people transitioning from Coq to Lean</li>
     </ul>
 
